--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,11 @@
 	<description>Spring Boot Demo with wechat MP</description>
 
 	<properties>
+		<maven.compiler.source>1.7</maven.compiler.source>
+		<maven.compiler.target>1.7</maven.compiler.target>
+		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.build.locales>zh_CN</project.build.locales>
-		<project.build.jdk>1.7</project.build.jdk>
 		<weixin-java-mp.version>2.3.0</weixin-java-mp.version>
 	</properties>
 
@@ -56,11 +58,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>${project.build.jdk}</source>
-					<target>${project.build.jdk}</target>
-					<encoding>${project.build.sourceEncoding}</encoding>
-				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
