--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 	<description>Spring Boot Demo with wechat MP</description>
 
 	<properties>
-    <weixin-java-mp.version>2.4.3</weixin-java-mp.version>
+    <weixin-java-mp.version>2.4.5.BETA</weixin-java-mp.version>
     
 		<maven.compiler.source>1.7</maven.compiler.source>
 		<maven.compiler.target>1.7</maven.compiler.target>
