升级sdk版本为3.1.0，并修复部分代码

--- a/src/main/resources/application.yml.template
+++ b/src/main/resources/application.yml.template
@@ -1,7 +1,7 @@
 logging:
   level:
     org.springframework.web: DEBUG
-    com.github.binarywang.demo.wechat: DEBUG
+    com.github.binarywang.demo.wx.mp: DEBUG
 
 wechat:
   mp:
