格式化代码

--- a/src/main/resources/application.yml.template
+++ b/src/main/resources/application.yml.template
@@ -2,8 +2,8 @@ logging:
   level:
     org.springframework.web: DEBUG
     com.github.binarywang.demo.wx.mp: DEBUG
-
-wechat:
+    me.chanjar.weixin: DEBUG
+wx:
   mp:
     appId:
     secret:
