--- a/src/main/resources/application.yml.template
+++ b/src/main/resources/application.yml.template
@@ -5,11 +5,12 @@ logging:
     me.chanjar.weixin: DEBUG
 wx:
   mp:
-    - appId: 11
-      secret: 11
-      token: 11
-      aesKey: 11
-    - appId: 22
-      secret: 11
-      token: 11
-      aesKey: 11
+    configs:
+      - appId: 1111 （一个公众号的appid）
+        secret: 1111（公众号的appsecret）
+        token: 111 （接口配置里的Token值）
+        aesKey: 111 （接口配置里的EncodingAESKey值）
+      - appId: 2222 （另一个公众号的appid，以下同上）
+        secret: 1111
+        token: 111
+        aesKey: 111
