--- a/src/main/resources/application.yml.template
+++ b/src/main/resources/application.yml.template
@@ -6,11 +6,11 @@ logging:
 wx:
   mp:
     configs:
-      - appId: 1111 （一个公众号的appid）
-        secret: 1111（公众号的appsecret）
-        token: 111 （接口配置里的Token值）
-        aesKey: 111 （接口配置里的EncodingAESKey值）
-      - appId: 2222 （另一个公众号的appid，以下同上）
+      - appId: 1111 # 第一个公众号的appid
+        secret: 1111 # 公众号的appsecret
+        token: 111 # 接口配置里的Token值
+        aesKey: 111 # 接口配置里的EncodingAESKey值
+      - appId: 2222 # 第二个公众号的appid，以下同上
         secret: 1111
         token: 111
         aesKey: 111
