--- a/src/main/resources/application.yml.template
+++ b/src/main/resources/application.yml.template
@@ -5,6 +5,10 @@ logging:
     me.chanjar.weixin: DEBUG
 wx:
   mp:
+    useRedis: false
+    redisConfig:
+      host: 127.0.0.1
+      port: 6379
     configs:
       - appId: 1111 # 第一个公众号的appid
         secret: 1111 # 公众号的appsecret
