--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.7.RELEASE</version>
+        <version>2.6.7</version>
     </parent>
 
     <groupId>com.github.binarywang</groupId>
@@ -20,7 +20,7 @@
     <properties>
         <weixin-java-mp.version>4.3.0</weixin-java-mp.version>
 
-        <java.version>14</java.version>
+        <java.version>8</java.version>
 <!--        <maven.compiler.source>1.8</maven.compiler.source>-->
 <!--        <maven.compiler.target>1.8</maven.compiler.target>-->
         <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
